objects/Share_of_Wallet__c.object
<CustomObject>
    <description>Contains the Share Of Wallet (SoW) on the Account Object.</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Share of Wallets</relationshipLabel>
        <relationshipName>Share_of_Wallets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CY_Incremental_TO__c</fullName>
        <description>Defines the additional (incremental) turnover that Danfoss can earn on this customer in the CY (Current Year) compared to Last Year (LY)</description>
        <inlineHelpText>Defines the additional (incremental) turnover that Danfoss can earn on this customer in the CY (Current Year) compared to Last Year (LY)</inlineHelpText>
        <label>CY incremental Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CY_Non_Address_TO__c</fullName>
        <description>Defines the turnover that Danfoss cannot address because of missing product/capabilities, or does not want to address because of strategic reason</description>
        <inlineHelpText>Defines the turnover that Danfoss cannot address because of missing product/capabilities, or does not want to address because of strategic reason</inlineHelpText>
        <label>CY Non-Addressable Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <defaultValue>IF ($RecordType.DeveloperName = &quot;Supplier_Share_of_Wallet&quot;, &quot;&quot;, &quot;Danfoss&quot;)</defaultValue>
        <description>Not Used CAN BE DELETED</description>
        <label>Customers Supplier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Name_picklist__c</fullName>
        <description>Customers Supplier</description>
        <inlineHelpText>The Supplier of the Account/Customer. For Danfoss typically a Competitor.</inlineHelpText>
        <label>Customers Supplier</label>
        <picklist>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC&amp;R-Henry Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Tech (Lenze)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adlee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBERTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alco (Emerson Flow Controls)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Laval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allen Bradley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Laval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alstom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amtech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ansaldo Sistemi Industriali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apotec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arcelik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armatch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATLANT-SERVICE Sp. z o.o.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWP Revalco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B &amp; R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baldor (Reliance)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belimo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bitzer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOCK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonfigilioli (Vectron)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brassen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bristol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunata</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Supplier_Name__c</fullName>
        <formula>CASE(TEXT(Type__c), 
      &apos;Competitor&apos;, TEXT( Competitor_Name_picklist__c ), 
      &apos;Danfoss&apos;, &apos;Danfoss&apos;,
      &apos;Unallocated&apos;, &apos;Unallocated&apos;,
      &apos;Other&apos;)</formula>
        <label>Competitor/Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Addressable_TO__c</fullName>
        <label>Future Addressable Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Addressable_Turnover__c</fullName>
        <description>Displays the turnover that can be earned in the future ((Total Potential TO-(Target TO CY - CY Non-Addressable TO))</description>
        <formula>Total_Potential_TO__c -(Targer_Turnover_Current_Year__c + CY_Non_Address_TO__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the turnover that can be earned in the future ((Total Potential TO-(Target TO CY - CY Non-Addressable TO))</inlineHelpText>
        <label>Future Addressable Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LY_TO_Baseline__c</fullName>
        <description>What has Danfoss or Supplier earned on this customer in the Last Year</description>
        <inlineHelpText>What has Danfoss or Supplier earned on this customer in the Last Year</inlineHelpText>
        <label>LY Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>Product Line</description>
        <inlineHelpText>Product Line</inlineHelpText>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>PL01 Automatic Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪02‪ ‪Burner Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪03‪ ‪Residential Heating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪04‪ ‪Industrial Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪06‪ ‪Household Compressors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪07‪ ‪Appliance Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪08‪ ‪District Energy Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪09‪ ‪VLT Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪10‪ ‪Venture Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪14‪ ‪High-Pressure Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪15‪ ‪Non Danfoss business areas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪16‪ ‪Water valves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪17‪ ‪Commercial Compressors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪18‪ ‪Gearmotors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪20‪ ‪Heat Recovery Ventilation &amp; Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪21‪ ‪Electric Heating Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪22‪ ‪Heat Pumps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪23‪ ‪Danfoss Silicon Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪24‪ ‪Heat Exchangers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪25‪ ‪Electronic Controllers &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪26‪ ‪Solar Inverters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪28‪ ‪Hydronic Balancing &amp; Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪30‪ ‪Customised Drives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪31‪ ‪District Energy Heat Exchangers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪32‪ ‪District Energy Heavy Duty Stations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪33‪ ‪District Energy Light Duty Stations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪34‪ ‪Floor Heating Hydronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪35‪ ‪Energy Metering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪36‪ ‪Power Stacks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL‪37‪ ‪Danfoss Turbocor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SoW_Total_Addressable_Turnover__c</fullName>
        <description>Displays the existing SoW (%) in the addresable customer basket, excluding the Non-Addresable TO ((Last year TO /(Total Potential TO -Current Non-Addresable TO))*100</description>
        <formula>IF(
(Total_Potential_TO__c - CY_Non_Address_TO__c) &gt;0,
LY_TO_Baseline__c /(Total_Potential_TO__c - CY_Non_Address_TO__c),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the existing SoW (%) in the addresable customer basket, excluding the Non-Addresable TO ((Last year TO /(Total Potential TO -Current Non-Addresable TO))*100</inlineHelpText>
        <label>SoW Total Addressable Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SoW_Total_Pot_TO__c</fullName>
        <description>Displays the existing SoW (%) of the total customer basket, including the Non-addresable TO (Last year TO /Total Potential TO)*100</description>
        <formula>IF(
    Total_Potential_TO__c &gt; 0, 
    (LY_TO_Baseline__c  /  Total_Potential_TO__c),
    0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the existing SoW (%) of the total customer basket, including the Non-addresable TO (Last year TO /Total Potential TO)*100</inlineHelpText>
        <label>SoW Total Potential Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SoW_for__c</fullName>
        <description>Share of Wallet for...Danfoss or Supplier.</description>
        <formula>IF( ISPICKVAL(Type__c, &quot;Competitor&quot;)   ,  Competitor_Name__c ,  IF( ISPICKVAL(Type__c, &quot;Danfoss&quot;) , &quot;Danfoss&quot;, &quot;&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Share of Wallet for...Danfoss or Supplier.</inlineHelpText>
        <label>SoW for</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Position__c</fullName>
        <description>The costs for changing the supplier and the suppliers position.</description>
        <inlineHelpText>The costs for changing the supplier and the suppliers position.</inlineHelpText>
        <label>Supplier Position</label>
        <picklist>
            <picklistValues>
                <fullName>1.  High Switching Cost and Entrenched Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. High Switching Cost but Competition Vulnerable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Low Switching Cost and Competition Vulnerable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. Low Switching Cost and Competition Disliked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Targer_Turnover_Current_Year__c</fullName>
        <description>Displays the turnover that Danfoss aims to earn in the current year on this specific account for this specific PL (Last Year TO + CY Incremental TO)</description>
        <formula>LY_TO_Baseline__c +  CY_Incremental_TO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the turnover that Danfoss aims to earn in the current year on this specific account for this specific PL (Last Year TO + CY Incremental TO)</inlineHelpText>
        <label>CY Target Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_TO_CY__c</fullName>
        <description>Targer Turnover Current Year</description>
        <inlineHelpText>Targer Turnover Current Year</inlineHelpText>
        <label>CY Target Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Potential_TO__c</fullName>
        <description>Total Potential in terms of Turnover</description>
        <inlineHelpText>Defines the total basket of the customer (for all customer’s suppliers /all products*/all technologies)</inlineHelpText>
        <label>Total Potential Turnover</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Share Of Wallet Type</description>
        <inlineHelpText>Share Of Wallet Type</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danfoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueChecker__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Field used when creating Share Of Wallet...not shown i Salesforce</description>
        <label>UniqueChecker</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Share of Wallet</label>
    <nameField>
        <displayFormat>SoW-{00000}</displayFormat>
        <label>Share of Wallet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Share of Wallet</pluralLabel>
    <recordTypes>
        <fullName>Danfoss_Share_of_Wallet</fullName>
        <active>true</active>
        <description>Used for creating Danfoss Share of Wallet</description>
        <label>Danfoss Share of Wallet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier_Share_of_Wallet</fullName>
        <active>true</active>
        <description>Used for creating Supplier Share of Wallet</description>
        <label>Supplier Share of Wallet</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CE_ShareofWallet_Currency_Consistency_Ch</fullName>
        <active>true</active>
        <description>Share of Wallets should be in the currency of the account</description>
        <errorConditionFormula>AND(text(Type__c) != &apos;SoWSumComp&apos;, Text(Type__c) != &apos;SoWSum&apos;, 
text(CurrencyIsoCode) !=  text(Account__r.CurrencyIsoCode))</errorConditionFormula>
        <errorMessage>Share of Wallets should be in the same currency as the account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CE_SoW_CANNOT_CHANGE_PRODUCTLINE</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Product_Line__c )</errorConditionFormula>
        <errorMessage>You cannot change Product Line once the record is saved, as this affects the un-allocated amount functionality</errorMessage>
    </validationRules>
</CustomObject>